# Rosie-Robot

./: .dockerignore  .gitignore  README.md  start_rosie.sh
docker/: Dockerfile  ros_entrypoint.sh
src/rosie_description/: CMakeLists.txt  package.xml  rivz config.rviz  setup.cfg
src/rosie_description/urdf/: model.urdf
src/rosie_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rosie_moveit_config/config/: controller_setting.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motion_planning.rviz  moveit_controllers.yaml  planning_python_api.yaml  ros2_controllers.yaml  rosie_V1.ros2_control.xacro  rosie_V1.srdf  rosie_V1.urdf.xacro  sensors_3d.yaml
src/rosie_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rosie_controller.launch.py  rosie_moveit_launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/rosie_moveit_config/scripts/: arm_control_from_UI.py  pose_test.py  synchronized_pub.py  transform.py
src/rosie_navigation/: CMakeLists.txt  package.xml
src/rosie_navigation/config/: nav2_params.yaml
src/rosie_navigation/launch/: bringup.launch.py
src/yolov8_obb/launch/: yolov8_obb.launch.py
src/yolov8_obb/scripts/: yolov8_obb_publisher.py
